src/styles/_broen-nav.scss
@import './_broen-variables.scss';

.broen-nav-container {
  position: absolute;
  height: 100%;
  width: $sidebar-open-width;
  font-size: 1.125em;
  background: $nav-bg;
}

.broen-nav-container,
.broen-nav-container a {
  color: $nav-link-color;
}

.nav-item-icon {
  color: $nav-icon-color;
}

.broen-nav-container a:hover,
.broen-nav-container a:focus {
  color: $nav-link-active-color;
  background-color: $nav-link-active-bg !important;
}

.broen-navbar,
.broen-nav,
.broen-nav-item,
.nav-item-group,
.nav-item-group li,
.nav-link {
  width: 100%;
  margin: 0;
  padding: 0;
}

.broen-nav-item {
  border-top: 1px solid $nav-item-border-color;
}

.nav-item-container {
  padding: 10px 15px;
  cursor: pointer;
}

.nav-item-text {
  padding-left: 8px
}

.broen-nav-dropdown {
  display: block;
  transition: opacity .2s, max-height .2s, z-index .2s;
  opacity: 0;
  max-height: 0;
  z-index: -1;
}

.nav-item-open .broen-nav-dropdown {
  opacity: 1;
  max-height: 240px;
  z-index: auto;
}

.nav-item-group {
  background: $nav-item-group-bg;
}

.nav-item-group li {
  list-style-type: none;
  padding: 8px 2px 8px 32px;
  background: $nav-item-group-item-bg;
  cursor: pointer;
}

.nav-item-group li:hover {
  background: $nav-item-group-item-active-bg;
}

.nav-link,
.nav-link:hover,
.nav-link:active,
.nav-link:visited
.nav-link:focus {
  display: block;
  text-decoration: none;
}

.nav-link {
  padding: 2px;
  padding-left: 32px;
  display: none;
}

.nav-item-open .nav-link {
  display: block;
}

.nav-item-caret-down {
  display: none;
}

.nav-item-open .nav-item-caret-down {
  display: block;
}

.nav-item-open .nav-item-caret-left {
  display: none;
}

#toggle-expand,
#toggle-compress {
  border-top: none;
}

.nav-toggle-text {
  font-size: 0.8em;
}

#toggle-expand {
  display: none;
}

/* Closed look */
@media (min-width: 768px) {
  .nav-collapsed.broen-nav-container {
    width: $sidebar-closed-width;
  }

  .nav-collapsed {
    .broen-nav-dropdown,
    .nav-item-text,
    .nav-item-caret,
    #toggle-compress {
      display: none;
    }

    #toggle-expand {
      display: block;
    }

    .broen-nav-item {
      position: relative;
      background: $nav-item-bg;
    }

    // flyout dropdown
    .broen-nav-item.nav-item-open {
      width: $sidebar-open-width + $sidebar-closed-width;
      border-top: 1px solid $nav-flyout-item-border-color;
      background-color: $nav-flyout-item-bg;
    }
    .nav-item-open {
      .broen-nav-dropdown {
        display: block;
        position: absolute;
        left: $sidebar-closed-width;
        width: $sidebar-open-width;
      }
      .nav-item-container {
      }
      .nav-item-text {
        display: inline-block;
        padding-left: 32px;
      }
      li {
        border-top: 1px solid $nav-flyout-item-border-color;
      }
      .nav-link {
        padding-left: 20px;
      }
    }
  }

}

/* Mobile look */
@media (max-width: 767px) {
  .broen-nav-container {
    position: static;
    height: auto;
    width: auto;
    transition: opacity .2s, max-height .2s, z-index .2s;
    opacity: 0;
    max-height: 0;
    z-index: -1;
  }

  .nav-mobile-collapsed {
    opacity: 1;
    max-height: 600px;
    z-index: auto;
  }

  #toggle-expand,
  #toggle-compress {
    display: none;
  }

  .broen-navbar {
    border-top: none;
  }
}

